<resources>
    <string name="app_name">AndroidCode</string>
    <string name="google_key">AIzaSyAbO1hDRhhQKHs945QBsNt0yCzBXG3X5Fk</string>
    <string name="no_network_msg">Please check your internet connection &amp; try again</string>
    <string name="lbl_please_wait">Please Wait...</string>
    <string name="internet_connected">network connected</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dismiss">dismiss</string>
    <string name="please_wait">please wait</string>
    <string name="retry">retry</string>
    <string name="server_error">server error</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="forcefully_enable_permission">You have forcefully denied some of the required permissions for this action.\nPlease go to permissions and allow them.</string>
    <string name="error_uppercase_pattern">password must have atleast one uppercase character !!</string>
    <string name="error_lowercase_pattern">password must have atleast one lowercase character !!</string>
    <string name="error_digit_pattern">password must have atleast one digit character !!</string>
    <string name="enter_first_name">enter first name</string>
    <string name="enter_last_name">enter last name</string>
    <string name="enter_your_email">enter email id</string>
    <string name="error_enter_valid_email">enter valid email id</string>
    <string name="error_email_must_be_different">email id must be different</string>
    <string name="enter_dob">enter dob</string>
    <string name="enter_country">enter country</string>
    <string name="enter_passowrd">enter password</string>
    <string name="error_passowrd_not_match">password not match</string>
    <string name="error_password_different">password must be different</string>
    <string name="error_referral_code">enter referral code</string>
    <string name="error_valid_code">enter valid code</string>
    <string name="error_six_digit_code">enter six digit code</string>
    <string name="confirm_pwd_length">check confirm password length</string>
    <string name="password_length">check password length</string>
    <string name="first_name">user name</string>
    <string name="password">password</string>
    <string name="select_multiple_image_title">select multiple image</string>
    <string name="widget_view_title">widget view</string>
    <string name="web_view_title">web view</string>
    <string name="current_location_title">current location</string>
    <string name="dialog_title">dialog</string>
    <string name="dynamic_layout_title">dynamic layout</string>
    <string name="shared_preference_title">shared preference</string>
    <string name="device_info_title">device info</string>
    <string name="speech_to_text_title">speech to text</string>
    <string name="recycler_view_title">recycler view</string>
    <string name="expend_spinner_title">expendable spinner</string>
    <string name="elaborate_recycler_view_title">elaborate recycler view</string>
    <string name="device_image_title">Device image</string>
    <string name="share_file_title">share file</string>
    <string name="service_fragment_title">services</string>
    <string name="google_map_title">google map</string>
    <string name="view_pager_tab_title">view pager tab</string>
    <string name="animation_title">animation</string>
    <string name="select_image">select image</string>
    <string name="login">login</string>
    <string name="remember_me">Remember me</string>
    <string name="selected">selected</string>
    <string name="unselected">unselected</string>
    <string name="none">none</string>
    <string name="select_date">select date</string>
    <string name="select_time">select time</string>
    <string name="done">done</string>
    <string name="start_progress">start progress</string>
    <string name="marquee_txt">This website intents to provide free and high quality tutorials, examples, exercises and solutions, questions and answers of programming and scripting languages:</string>
    <string name="delete">delete</string>
    <string name="long_click_here">plong click</string>
    <string name="get_continue_location">Get Location with parameter</string>
    <string name="get_location">Get Location</string>
    <string name="stop_location_update">stop location update</string>
    <string name="get_updated_location_address">get updated location with address</string>
    <string name="single_event_dialog">single event dialog</string>
    <string name="two_event_dialog">two event dialog</string>
    <string name="three_event_dialog">three event dialog</string>
    <string name="custom_dialog">custom dialog</string>
    <string name="dialog_fragment">dialog fragment</string>
    <string name="list_dialog">list dialog</string>
    <string name="select_country">select country</string>
    <string name="selection_list_dialog">selection list dialog</string>
    <string name="select_multiple_image">select multiple image</string>
    <string name="select_video">select video</string>
    <string name="date">date</string>
    <string name="particulars">particulars</string>
    <string name="vch_type">vch type</string>
    <string name="vch_no">vch no.</string>
    <string name="debit">debit</string>
    <string name="credit">credit</string>
    <string name="total_amount">total amount</string>
    <string name="set_value_in_preference">set value in preference</string>
    <string name="get_value_from_preference">get value from preference</string>
    <string name="clear_preference">clear preference</string>
    <string name="remove_key">remove key</string>
    <string name="successfully_save">successfully save</string>
    <string name="no_data_found">no data found</string>
    <string name="successfully_remove_key">successfully remove key</string>
    <string name="successfully_clear_preference">successfully clear preference</string>
    <string name="text_to_speech">text to speech</string>
    <string name="blink">blink</string>
    <string name="fade">fade</string>
    <string name="zoom">zoom</string>
    <string name="move">move</string>
    <string name="rotate">rotate</string>
    <string name="slide">slide</string>
    <string name="fade_in">fade in</string>
    <string name="fade_out">fade out</string>
    <string name="cross_fade_out">cross fade out</string>
    <string name="cross_fade_in">cross fade in</string>
    <string name="zoom_in">zoom in</string>
    <string name="zoom_out">zoom out</string>
    <string name="slide_up">slide up</string>
    <string name="slide_down">slide down</string>
    <string name="bounce">bounce</string>
    <string name="sequence">sequence</string>
    <string name="left_right">left right animation</string>
    <string name="top_to_bottom">top to bottom</string>
    <string name="botom_to_top">botom to top</string>
    <string name="right_to_left">right to left</string>
    <string name="left_to_right">left to right</string>
    <string name="together">together</string>
    <string name="list">list</string>
    <string name="grid">grid</string>
    <string name="expendable_list_view">expendable list view</string>
    <string name="spinner">spinner</string>
    <string name="select_picture">Select Picture</string>
    <string name="ssl_certificate_error">SSL Certificate error.</string>
    <string name="ssl_certificate_untrusted">The certificate authority is not trusted.</string>
    <string name="ssl_certificate_expired">The certificate has expired.</string>
    <string name="ssl_certificate_mismatch">The certificate Hostname mismatch.</string>
    <string name="ssl_certificate_notvalid">The certificate is not yet valid.</string>
    <string name="common_adapter">common adapter</string>
    <string name="get_all_image">get all device image</string>
    <string name="image_view_type">image view type</string>
    <string name="crop_image">crop_image</string>
    <string name="capture_image_in_bg">capture image in background</string>
    <string name="whats_app_type">what\'s app type</string>
    <string name="permission_require">permission require to access this feature.</string>
    <string name="capture_image">capture image</string>
    <string name="record_video">record video</string>
    <string name="compress_video">compress video</string>
    <string name="crop_video">crop video</string>
    <string name="capture_record_video">capture record video</string>
    <string name="share_text">share text</string>
    <string name="share_image">share image</string>
    <string name="share_image_text">share image text</string>
    <string name="REFERAL_TITLE"><![CDATA[Get back your lost &amp; stolen android mobile phone! Yes, its true! I found a great security app. \"Tesseract Power\" For mobile protection, download it free &amp; check it now.!]]></string>
    <string name="share_local_image">share local image</string>
    <string name="send_image_text_email">share image text on email</string>
    <string name="end_less_scroll">end less scroll</string>
    <string name="staggered_recycler_view">staggered view</string>
    <string name="swipe_to_delete">swipe to delete</string>
    <string name="boot">boot receiver</string>
    <string name="sim_change_receiver">sim change receiver</string>
    <string name="referral_code">referral code</string>
    <string name="sms_receiver">sms receiver</string>
    <string name="network_state_change">network state change</string>
    <string name="local_receiver">local receiver</string>
    <string name="phone_contact">phone contact</string>
    <string name="get_sms">get sms</string>
    <string name="read_phone_contact">read phone contact</string>
    <string name="read_sms">read sms</string>
    <string name="read_image">read image</string>
    <string name="read_call_log">read call log</string>
    <string name="google_map">google map</string>
    <string name="draw_polyline">draw polyline</string>
    <string name="sqlite_database">sqlite database</string>
    <string name="room_database">room database</string>
    <string name="insert_user">insert user</string>
    <string name="get_all_user">get all user</string>
    <string name="update_user">update user</string>
    <string name="delete_user">delete user</string>
    <string name="delete_all_user">delate all user</string>
    <string name="delete_table">delete table</string>
    <string name="user_successfully_inserted">user successfully inserted</string>
    <string name="enter_user_name">enter user name</string>
    <string name="user_successfully_updated">user successfullly updated</string>
    <string name="user_successfully_deleted">user successfully deleted</string>
    <string name="table_successfully_clear">successfully cleared.</string>
    <string-array name="image_loader">
        <item>app_color</item>
        <item>other image</item>
    </string-array>
    <string-array name="file_picker_type">
        <item>capture_image</item>
        <item>select image</item>
        <item>select video</item>
        <item>record video</item>
        <item>select multiple image</item>
        <item>capture record video</item>
        <item>select multiple image</item>

    </string-array>
    <string name="tab_without_icon">tab without icon</string>
    <string name="tab_with_icon">tab with icon</string>
    <string name="fingerprint_message">Place your fingertip on the scanner to verify fingerprint.</string>
    <string name="successful_message">You have successfully authenticated with FingerPrint.</string>
    <string name="fingerprint_not_exist">Your Device does not have a Fingerprint Sensor.</string>
    <string name="fingerprint_not_enabled">Fingerprint authentication permission not enabled in your device.</string>
    <string name="fingerprint_not_registered">Register at least one fingerprint in Settings to make work Fingerprint.</string>
</resources>