<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--<ScrollView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:fillViewport="true">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_all_image"
                    style="@style/Button"
                    android:layout_marginTop="@dimen/dp15"
                    android:text="@string/get_all_image" />

                <Button
                    android:id="@+id/btn_crop_image"
                    style="@style/Button"
                    android:layout_marginTop="@dimen/dp15"
                    android:text="@string/crop_image" />

                <Button
                    android:id="@+id/btn_capture_image_bg"
                    style="@style/Button"
                    android:layout_marginTop="@dimen/dp15"
                    android:text="@string/capture_image_in_bg" />

                <Button
                    android:id="@+id/btn_whats_app"
                    style="@style/Button"
                    android:layout_marginTop="@dimen/dp15"
                    android:text="@string/whats_app_type" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_image_show"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp5"
                    />
            </LinearLayout>
        <!--</ScrollView>-->

        <include
            android:id="@+id/loader"
            layout="@layout/loader" />
    </RelativeLayout>
</layout>